<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PasteParty Companion</string>
    <string name="share_to_pasteparty">Share to PasteParty</string>
    <string name="server_url">Server URL</string>
    <string name="server_url_hint">http://192.168.1.100:8081</string>
    <string name="server_url_description">Enter your PasteParty server URL (e.g., http://192.168.1.100:8081)</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="sending">Sending…</string>
    <string name="success">Successfully sent to PasteParty!</string>
    <string name="error">Error: %s</string>
    <string name="no_server_url">Please configure the server URL in settings first</string>
    <string name="invalid_url">Invalid server URL</string>
    <string name="sending_failed">Failed to send content</string>
    <string name="open_settings">Open Settings</string>
    <string name="close">Close</string>
    <string name="configure_server">Configure Server</string>
    <string name="server_url_required">Server URL is required</string>
</resources>


